fixed clock showing up too big

--- a/styles/clock.css
+++ b/styles/clock.css
@@ -1,11 +1,12 @@
 .clock{
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 600;
     letter-spacing: .2rem;
     color: transparent;
     background: linear-gradient(90deg, blue 0%, purple 25%, red 50%, yellow 75%, violet 100%);
     background-clip: text;
     min-height: 100%;
+    
 }
 
 section>.clock{
